src/wrapper_refcounted/torch_refcounted_api_generated.h

value atg__scaled_dot_product_efficient_attention(value query, value key, value value_, value attn_bias, int compute_log_sumexp, double dropout_p, int is_causal, value scale);
value atg__scaled_dot_product_flash_attention_backward(value grad_out, value query, value key, value value_, value out, value logsumexp, value cum_seq_q, value cum_seq_k, int64_t max_q, int64_t max_k, double dropout_p, int is_causal, value philox_seed, value philox_offset, value scale);
value atg__scaled_dot_product_flash_attention_for_cpu(value query, value key, value value_, double dropout_p, int is_causal, value attn_mask, value scale);
value atg__scaled_dot_product_flash_attention_for_cpu_backward(value grad_out, value query, value key, value value_, value out, value logsumexp, double dropout_p, int is_causal, value attn_mask, value scale);
value atg__scaled_grouped_mm(value self, value mat2, value scale_a, value scale_b, value offs, value bias, value scale_result, int out_dtype, int use_fast_accum);
value atg__scaled_mm(value self, value mat2, value scale_a, value scale_b, value bias, value scale_result, int out_dtype, int use_fast_accum);
value atg__scaled_mm_out(value out, value self, value mat2, value scale_a, value scale_b, value bias, value scale_result, int out_dtype, int use_fast_accum);
value atg__scatter_reduce(value self, int64_t dim, value index, value src, const char * reduce, int include_self);
value atg__scatter_reduce_(value self, int64_t dim, value index, value src, const char * reduce, int include_self);
value atg__scatter_reduce_two_out(value out, value self, int64_t dim, value index, value src, const char * reduce, int include_self);
value atg__segment_reduce_backward(value grad, value output, value data, const char * reduce, value lengths, value offsets, int64_t axis, value initial);
value atg__segment_reduce_backward_out(value out, value grad, value output, value data, const char * reduce, value lengths, value offsets, int64_t axis, value initial);
value atg__shape_as_tensor(value self);
value atg__slow_conv2d_backward(value grad_input, value grad_weight, value grad_bias, value grad_output, value self, value weight, value kernel_size, value stride, value padding);
value atg__sobol_engine_draw(value quasi, int64_t n, value sobolstate, int64_t dimension, int64_t num_generated, int dtype);
value atg__sobol_engine_ff_(value self, int64_t n, value sobolstate, int64_t dimension, int64_t num_generated);
value atg__sobol_engine_initialize_state_(value self, int64_t dimension);
value atg__sobol_engine_scramble_(value self, value ltm, int64_t dimension);
value atg__softmax(value self, int64_t dim, int half_to_float);
value atg__softmax_backward_data(value grad_output, value output, int64_t dim, int input_dtype);
value atg__softmax_backward_data_out(value grad_input, value grad_output, value output, int64_t dim, int input_dtype);
value atg__softmax_out(value out, value self, int64_t dim, int half_to_float);
value atg__sparse_addmm(value self, value mat1, value mat2, value beta, value alpha);
value atg__sparse_addmm_out(value out, value self, value mat1, value mat2, value beta, value alpha);
value atg__sparse_broadcast_to(value self, value size);
value atg__sparse_broadcast_to_copy(value self, value size);
value atg__sparse_broadcast_to_copy_out(value out, value self, value size);
value atg__sparse_bsc_tensor_unsafe(value ccol_indices, value row_indices, value values, value size, int options_kind, int options_device);
value atg__sparse_bsr_tensor_unsafe(value crow_indices, value col_indices, value values, value size, int options_kind, int options_device);
value atg__sparse_compressed_tensor_unsafe(value compressed_indices, value plain_indices, value values, value size, int options_kind, int options_device);
value atg__sparse_compressed_tensor_with_dims(int64_t nnz, int64_t dense_dim, value size, value blocksize, int index_dtype, int options_kind, int options_device);
value atg__sparse_coo_tensor_unsafe(value indices, value values, value size, int options_kind, int options_device, int is_coalesced);
value atg__sparse_coo_tensor_with_dims(int64_t sparse_dim, int64_t dense_dim, value size, int options_kind, int options_device);
value atg__sparse_coo_tensor_with_dims_and_tensors(int64_t sparse_dim, int64_t dense_dim, value size, value indices, value values, int options_kind, int options_device, int is_coalesced);
value atg__sparse_coo_tensor_with_dims_and_tensors_out(value out, int64_t sparse_dim, int64_t dense_dim, value size, value indices, value values, int is_coalesced);
value atg__sparse_coo_tensor_with_dims_out(value out, int64_t sparse_dim, int64_t dense_dim, value size);
value atg__sparse_csc_tensor_unsafe(value ccol_indices, value row_indices, value values, value size, int options_kind, int options_device);
value atg__sparse_csr_prod(value self, value dim, int keepdim, int dtype);
value atg__sparse_csr_prod_dim_dtype_out(value out, value self, value dim, int keepdim, int dtype);
value atg__sparse_csr_sum(value self, value dim, int keepdim, int dtype);
value atg__sparse_csr_sum_dim_dtype_out(value out, value self, value dim, int keepdim, int dtype);
value atg__sparse_csr_tensor_unsafe(value crow_indices, value col_indices, value values, value size, int options_kind, int options_device);
value atg__sparse_log_softmax(value self, int64_t dim, int half_to_float);
value atg__sparse_log_softmax_backward_data(value grad_output, value output, int64_t dim, value self);
value atg__sparse_log_softmax_backward_data_out(value out, value grad_output, value output, int64_t dim, value self);
value atg__sparse_log_softmax_int(value self, int64_t dim, int dtype);
value atg__sparse_log_softmax_out(value out, value self, int64_t dim, int half_to_float);
value atg__sparse_mask_projection(value self, value mask, int accumulate_matches);
value atg__sparse_mask_projection_out(value out, value self, value mask, int accumulate_matches);
value atg__sparse_mm(value sparse, value dense);
value atg__sparse_mm_reduce(value sparse, value dense, const char * reduce);