src/bindings/torch_bindings_generated1.ml

(* THIS FILE IS AUTOMATICALLY GENERATED, DO NOT EDIT BY HAND! *)

open Ctypes

module C0 (F : Cstubs.FOREIGN) = struct
  open F
  open Type_defs

  let stubs__scaled_dot_product_efficient_attention =
    foreign
      "atg__scaled_dot_product_efficient_attention"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> double
       @-> int
       @-> double
       @-> int
       @-> returning void)
  ;;

  let stubs__scaled_dot_product_flash_attention_backward =
    foreign
      "atg__scaled_dot_product_flash_attention_backward"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> double
       @-> int
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> int
       @-> returning void)
  ;;

  let stubs__scaled_dot_product_flash_attention_for_cpu =
    foreign
      "atg__scaled_dot_product_flash_attention_for_cpu"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> int
       @-> gc_tensor
       @-> double
       @-> int
       @-> returning void)
  ;;

  let stubs__scaled_dot_product_flash_attention_for_cpu_backward =
    foreign
      "atg__scaled_dot_product_flash_attention_for_cpu_backward"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> int
       @-> gc_tensor
       @-> double
       @-> int
       @-> returning void)
  ;;

  let stubs__scaled_grouped_mm =
    foreign
      "atg__scaled_grouped_mm"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__scaled_mm =
    foreign
      "atg__scaled_mm"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__scaled_mm_out =
    foreign
      "atg__scaled_mm_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__scatter_reduce =
    foreign
      "atg__scatter_reduce"
      (gc_tensor
       @-> int64_t
       @-> gc_tensor
       @-> gc_tensor
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__scatter_reduce_ =
    foreign
      "atg__scatter_reduce_"
      (gc_tensor
       @-> int64_t
       @-> gc_tensor
       @-> gc_tensor
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__scatter_reduce_two_out =
    foreign
      "atg__scatter_reduce_two_out"
      (gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> gc_tensor
       @-> gc_tensor
       @-> string
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__segment_reduce_backward =
    foreign
      "atg__segment_reduce_backward"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> string
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> scalar
       @-> returning raw_tensor)
  ;;

  let stubs__segment_reduce_backward_out =
    foreign
      "atg__segment_reduce_backward_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> string
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> scalar
       @-> returning raw_tensor)
  ;;

  let stubs__shape_as_tensor =
    foreign "atg__shape_as_tensor" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__slow_conv2d_backward =
    foreign
      "atg__slow_conv2d_backward"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> returning void)
  ;;

  let stubs__sobol_engine_draw =
    foreign
      "atg__sobol_engine_draw"
      (ptr raw_tensor
       @-> gc_tensor
       @-> int64_t
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int
       @-> returning void)
  ;;

  let stubs__sobol_engine_ff_ =
    foreign
      "atg__sobol_engine_ff_"
      (gc_tensor
       @-> int64_t
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs__sobol_engine_initialize_state_ =
    foreign
      "atg__sobol_engine_initialize_state_"
      (gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs__sobol_engine_scramble_ =
    foreign
      "atg__sobol_engine_scramble_"
      (gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs__softmax =
    foreign "atg__softmax" (gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__softmax_backward_data =
    foreign
      "atg__softmax_backward_data"
      (gc_tensor @-> gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__softmax_backward_data_out =
    foreign
      "atg__softmax_backward_data_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__softmax_out =
    foreign
      "atg__softmax_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__sparse_addmm =
    foreign
      "atg__sparse_addmm"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> scalar
       @-> returning raw_tensor)
  ;;

  let stubs__sparse_addmm_out =
    foreign
      "atg__sparse_addmm_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> scalar
       @-> returning raw_tensor)
  ;;

  let stubs__sparse_broadcast_to =
    foreign
      "atg__sparse_broadcast_to"
      (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__sparse_broadcast_to_copy =
    foreign
      "atg__sparse_broadcast_to_copy"
      (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__sparse_broadcast_to_copy_out =
    foreign
      "atg__sparse_broadcast_to_copy_out"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__sparse_bsc_tensor_unsafe =
    foreign
      "atg__sparse_bsc_tensor_unsafe"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__sparse_bsr_tensor_unsafe =
    foreign
      "atg__sparse_bsr_tensor_unsafe"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__sparse_compressed_tensor_unsafe =
    foreign
      "atg__sparse_compressed_tensor_unsafe"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__sparse_compressed_tensor_with_dims =
    foreign
      "atg__sparse_compressed_tensor_with_dims"
      (int64_t
       @-> int64_t
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__sparse_coo_tensor_unsafe =
    foreign
      "atg__sparse_coo_tensor_unsafe"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__sparse_coo_tensor_with_dims =
    foreign
      "atg__sparse_coo_tensor_with_dims"
      (int64_t
       @-> int64_t
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__sparse_coo_tensor_with_dims_and_tensors =
    foreign
      "atg__sparse_coo_tensor_with_dims_and_tensors"
      (int64_t
       @-> int64_t
       @-> ptr int64_t
       @-> int
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__sparse_coo_tensor_with_dims_and_tensors_out =
    foreign
      "atg__sparse_coo_tensor_with_dims_and_tensors_out"
      (gc_tensor
       @-> int64_t
       @-> int64_t
       @-> ptr int64_t
       @-> int
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__sparse_coo_tensor_with_dims_out =
    foreign
      "atg__sparse_coo_tensor_with_dims_out"
      (gc_tensor @-> int64_t @-> int64_t @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__sparse_csc_tensor_unsafe =
    foreign
      "atg__sparse_csc_tensor_unsafe"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__sparse_csr_prod =
    foreign
      "atg__sparse_csr_prod"
      (gc_tensor @-> ptr int64_t @-> int @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs__sparse_csr_prod_dim_dtype_out =
    foreign
      "atg__sparse_csr_prod_dim_dtype_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__sparse_csr_sum =
    foreign
      "atg__sparse_csr_sum"
      (gc_tensor @-> ptr int64_t @-> int @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs__sparse_csr_sum_dim_dtype_out =
    foreign
      "atg__sparse_csr_sum_dim_dtype_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__sparse_csr_tensor_unsafe =
    foreign
      "atg__sparse_csr_tensor_unsafe"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__sparse_log_softmax =
    foreign
      "atg__sparse_log_softmax"
      (gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__sparse_log_softmax_backward_data =
    foreign
      "atg__sparse_log_softmax_backward_data"
      (gc_tensor @-> gc_tensor @-> int64_t @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__sparse_log_softmax_backward_data_out =
    foreign
      "atg__sparse_log_softmax_backward_data_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs__sparse_log_softmax_int =
    foreign
      "atg__sparse_log_softmax_int"
      (gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__sparse_log_softmax_out =
    foreign
      "atg__sparse_log_softmax_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__sparse_mask_projection =
    foreign
      "atg__sparse_mask_projection"
      (gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs__sparse_mask_projection_out =
    foreign
      "atg__sparse_mask_projection_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs__sparse_mm =
    foreign "atg__sparse_mm" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__sparse_mm_reduce =
    foreign
      "atg__sparse_mm_reduce"
      (gc_tensor @-> gc_tensor @-> string @-> returning raw_tensor)
  ;;
